--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,189 @@
-*{
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-body{
+body {
   background-color: whitesmoke !important;
+  /* background: linear-gradient(to bottom, #FFC300, #FF5733), #F44336; */
+  /* background: linear-gradient(var(--pink) 0%, var(--violet) 100%); */
 }
 
+/* Style for GoogleOauth Component */
+.loginbox {
+  background: linear-gradient(to bottom, #ffc300, #ff5733), #f44336;
+  margin-top: 11.875rem;
+  height: 25rem;
+  width: 37.5rem;
+}
+
+.heading {
+  /* width:50%; */
+  margin-left: 20%;
+  margin-right: 10%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+.button {
+  margin-left: 30%;
+  margin-right: 30%;
+  margin-top: 5rem;
+}
+
+/* Style for registration form component */
+
+.form {
+  width: 30%;
+  margin-top: 10px;
+  margin-left: 35%;
+  margin-right: 35%;
+}
+
+.form-details {
+  width: 200px;
+  margin-top: 10px;
+}
+
+/* Style for fetchdata component */
+
+.searchbar-input {
+  width: 83%;
+  height: 50px;
+  padding: 15px;
+}
+
+.searchbar-button {
+  width: 8%;
+  height: 50px;
+}
+
+table {
+  /* width: 400px; */
+  border-color: ActiveBorder !important;
+}
+
+tbody {
+  background-color: #f0f8ff;
+  display: block;
+  height: 400px;
+  overflow: auto;
+}
+
+tbody tr td img {
+  width: 100px;
+  height: 80px;
+}
+thead,
+tbody tr {
+  display: table;
+  width: 1320px;
+  table-layout: fixed;
+  word-wrap: break-word;
+}
+
+.pageno {
+  margin-top: 8px;
+}
+
+.footer {
+  width: 100%;
+}
+
+/* Style for navbar component */
+.navbar-position {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 1;
+}
+
+.navbar-image {
+  width: 80px;
+  height: 70px;
+  border-radius: 100%;
+}
+
+.navbar-logout {
+  background-color: red;
+}
+
+/* Style for updateform cpmponents */
+.update-form {
+  margin-left: 30px;
+  margin-bottom: 30px;
+  margin-top: 15px;
+}
+
+.update-form-details {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.text-area {
+  height: 100px;
+}
+
+.image-label {
+  margin-bottom: 35px;
+}
+
+.input-image {
+  margin-top: -25px;
+}
+
+.update-form-image {
+  width: 100px;
+  height: 80px;
+}
+@media only screen and (max-width: 576px) {
+  /* Style for GoogleOauth Component */
+  .loginbox {
+    background: linear-gradient(to bottom, #ffc300, #ff5733), #f44336;
+    margin-top: 11.875rem;
+    height: 25rem;
+    width: 85%;
+  }
+
+  /* Style for registration component */
+  .form {
+    width: 200px;
+    margin-left: 5%;
+  }
+
+  /* Style for fetchdata component */
+  .searchbar {
+    width: 95%;
+  }
+}
+
+@media only screen and (max-width: 991px) {
+  .searchbar-input {
+    width: 79%;
+  }
+
+  .searchbar-button {
+    width: 10%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .searchbar-input {
+    width: 70%;
+  }
+
+  .searchbar-button {
+    width: 14%;
+  }
+}
+
+@media only screen and (max-width: 490px) {
+  .searchbar-input {
+    width: 58%;
+  }
+
+  .searchbar-button {
+    width: 20%;
+  }
+}
