--- a/src/App.css
+++ b/src/App.css
@@ -59,8 +59,13 @@ body {
   height: 50px;
 }
 
+.scrollabletable {
+  max-width: 100vw;
+  overflow-x: scroll;
+}
+
 table {
-  /* width: 400px; */
+  display: table;
   border-color: ActiveBorder !important;
 }
 
@@ -68,7 +73,7 @@ tbody {
   background-color: #f0f8ff;
   display: block;
   max-height: 400px;
-  overflow: auto;
+  overflow: scroll;
 }
 
 tbody tr td img {
